# T2DSim_AI

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  pyproject.toml
example/: runDTNeuralOGTT.py  runOGTT.py
src/t2dsim_ai/: __about__.py  create_scenarios.py  model_DTNeuralOGTT.py  model_neuralOGTT.py  options.py  preprocess.py  ss_simulator.py
src/t2dsim_ai/models/: OGTT_productionModel_6compartments.pt  initSteadyStates.csv
src/t2dsim_ai/models/DigitalTwins/S021-002/: info.csv  loss.csv  model.pt  scaler_inputsPop.pkl
src/t2dsim_ai/models/DigitalTwins/S021-005/: info.csv  loss.csv  model.pt  scaler_inputsPop.pkl
src/t2dsim_ai/models/DigitalTwins/S021-006/: info.csv  loss.csv  model.pt  scaler_inputsPop.pkl
src/t2dsim_ai/models/DigitalTwins/S021-007/: info.csv  loss.csv  model.pt  scaler_inputsPop.pkl
src/t2dsim_ai/models/DigitalTwins/S021-008/: info.csv  loss.csv  model.pt  scaler_inputsPop.pkl
src/t2dsim_ai/models/DigitalTwins/S021-010/: info.csv  loss.csv  model.pt  scaler_inputsPop.pkl
src/t2dsim_ai/models/DigitalTwins/S021-012/: info.csv  loss.csv  model.pt  scaler_inputsPop.pkl
src/t2dsim_ai/models/DigitalTwins/S021-013/: info.csv  loss.csv  model.pt  scaler_inputsPop.pkl
src/t2dsim_ai/models/DigitalTwins/S021-014/: info.csv  loss.csv  model.pt  scaler_inputsPop.pkl
src/t2dsim_ai/models/DigitalTwins/S021-015/: info.csv  loss.csv  model.pt  scaler_inputsPop.pkl
src/t2dsim_ai/models/DigitalTwins/S021-016/: info.csv  loss.csv  model.pt  scaler_inputsPop.pkl
src/t2dsim_ai/models/DigitalTwins/S021-019/: info.csv  loss.csv  model.pt  scaler_inputsPop.pkl
src/t2dsim_ai/models/DigitalTwins/S021-022/: info.csv  loss.csv  model.pt  scaler_inputsPop.pkl
src/t2dsim_ai/models/DigitalTwins/S021-024/: info.csv  loss.csv  model.pt  (+1 more)
src/t2dsim_ai/models/scaler/: scaler_inputs_T1D.pkl  scaler_states_OGTT.pkl
tests/: __init__.py
(+104 files in other folders)
